--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,36 @@
 @import "tailwindcss";
+@plugin './hero.ts';
+
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f2f5ea;
+  --foreground: #2c363f;
 }
-
+.bg-divider {
+  background-color: var(--background) !important;
+}
 @theme inline {
+  --breakpoint-xs: 30rem;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-dark: var(--foreground);
+  --color-bg: var(--background);
 }
-
-@media (prefers-color-scheme: dark) {
+.section {
+  @apply container px-5! sm:px-0 mx-auto;
+}
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
+  background: var(--color-bg);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
